fix: remove scrollbar from sidebar

--- a/src/courseware/course/sidebar/sidebars/course-outline/CourseOutlineTray.scss
+++ b/src/courseware/course/sidebar/sidebars/course-outline/CourseOutlineTray.scss
@@ -1,14 +1,12 @@
 .outline-sidebar-wrapper {
     width: 32.125rem;
     max-width: 100%;
-    overflow: auto;
     position: relative;
     flex-shrink: 0;
 }
 
 .outline-sidebar {
     @media (min-width: map-get($grid-breakpoints, "xl")) {
-        position: absolute;
         left: 0;
         top: 0;
     }
